--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,15 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>fluent-hc</artifactId>
+    	<version>4.3.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.httpcomponents</groupId>
+    	<artifactId>httpclient</artifactId>
+    	<version>4.3.4</version>
+    </dependency>
   </dependencies>
 </project>
