--- a/build.gradle
+++ b/build.gradle
@@ -7,5 +7,6 @@ repositories {
 
 dependencies {
     compile 'org.json:json:20140107'
+    compile 'commons-httpclient:commons-httpclient:3.1'
     testCompile 'junit:junit:4.11'
 }
