--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     compile 'org.json:json:20140107'
     compile 'commons-httpclient:commons-httpclient:3.1'
     testCompile 'junit:junit:4.11'
+    testCompile 'com.github.tomakehurst:wiremock:1.18'
 }
