--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 dependencies {
     compile 'org.json:json:20140107'
     compile 'commons-httpclient:commons-httpclient:3.1'
+    compile 'com.google.code.gson:gson:2.2.4'
     testCompile 'junit:junit:4.11'
     testCompile 'com.github.tomakehurst:wiremock:1.18'
 }
