DOB -> dob; KondutoCustomerFactory coloca dob em formato dd-mm-yyyy ao invés de timestamp, facilitando a leitura; script de build condiciona execução do signing à presença de uploadArchives no grafo de tarefas; bump versão 2.7.0

--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,10 @@ artifacts {
     archives sourcesJar
 }
 
-// signing {
-//     sign configurations.archives
-// }
+ signing {
+     required { gradle.taskGraph.hasTask("uploadArchives") }
+     sign configurations.archives
+ }
 
 uploadArchives {
     repositories {
@@ -62,11 +63,11 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-authentication(userName: hasProperty('ossrhUsername')?ossrhUsername:'', password: hasProperty('ossrhPassword')?ossrhPassword:'')
+                authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-authentication(userName: hasProperty('ossrhUsername')?ossrhUsername:'', password: hasProperty('ossrhPassword')?ossrhPassword:'')
+                authentication(userName: ossrhUsername, password: ossrhPassword)
             }
 
             pom.project {
