--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'commons-httpclient:commons-httpclient:3.+'
-    implementation 'com.google.code.gson:gson:2.+'
-    testImplementation 'junit:junit:4.+'
-    testImplementation 'com.github.tomakehurst:wiremock:1.+'
+    implementation 'commons-httpclient:commons-httpclient:3.1'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
 }
 
 task sourcesJar(type: Jar) {
